# clinch-terminal

./: CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: changelog_draft.yml  ci.yml  create_release.yml  cut_new_releases.yml  populate_build_cache.yml  repo-sync.yml
app/: Cargo.toml
app/src/: agent_resume.rs  agent_resume_tests.rs  app_state.rs  app_state_tests.rs  features.rs  lib.rs  tab.rs
app/src/ai/: ai_document_view.rs
app/src/ai/agent_management/: agent_management_model.rs  mod.rs
app/src/ai/blocklist/: block.rs
app/src/ai/skills/: skill_manager.rs  skill_manager_tests.rs
app/src/image_viewer/: mod.rs
app/src/launch_configs/: launch_config.rs
app/src/notebooks/: link.rs
app/src/pane_group/: mod.rs  mod_tests.rs
app/src/pane_group/pane/: image_pane.rs  mod.rs  terminal_pane.rs
app/src/persistence/: sqlite.rs
app/src/server/telemetry/: events.rs
app/src/settings_view/: features_page.rs  mod.rs  teams_page.rs  warp_drive_page.rs
app/src/terminal/: cli_agent.rs  cli_agent_tests.rs  input.rs  session_settings.rs  view.rs
app/src/ui_components/: agent_icon.rs
app/src/util/: openable_file_type.rs  openable_file_type_tests.rs
app/src/workspace/: action.rs  header_color.rs  header_color_tests.rs  mod.rs  view.rs  view_tests.rs
crates/cli_agent_usage/: Cargo.toml
crates/cli_agent_usage/examples/: print_usage.rs
crates/cli_agent_usage/src/: cache.rs  claude.rs  codex.rs  format.rs  http.rs  keychain.rs  lib.rs  pricing.rs
crates/integration/: Cargo.toml
crates/integration/src/: test.rs
crates/integration/src/test/: file_tree.rs  skills_panel.rs
crates/integration/tests/integration/: ui_tests.rs
crates/warp_features/src/: lib.rs
crates/warp_server_auth/src/: auth_state.rs
docs/superpowers/plans/: 2026-06-21-warp-agent-session-resume.md  2026-06-30-agent-attention-badges.md  2026-06-30-agent-fork-compact-buttons.md  2026-06-30-cli-agent-usage-crate.md  2026-06-30-cli-agent-usage-footer-ui.md  2026-06-30-clinch-web-landing.md  2026-06-30-image-preview-pane.md  2026-06-30-skills-panel.md  2026-07-01-tab-tearoff.md
docs/superpowers/specs/: 2026-06-30-agent-attention-badges-design.md  2026-06-30-agent-fork-compact-buttons-design.md  2026-06-30-cli-agent-usage-footer-design.md  2026-06-30-cli-agent-usage-footer-ui.md  2026-06-30-clinch-web-landing-design.md  2026-06-30-image-preview-pane-design.md  2026-06-30-reopen-closed-tab-agent-resume-design.md  2026-06-30-ship-makefile-design.md  2026-06-30-skills-panel-design.md  2026-06-30-window-header-project-colors-design.md  2026-07-01-channel-config-no-backend-design.md  2026-07-01-clinch-no-backend-gut-design.md  2026-07-01-tab-tearoff-design.md
script/macos/: bundle
tools/agent-resume/: README.md  build-app.sh  claude-session-start.sh  claude.zsh  install-agent-plugins.sh  install.sh
tools/agent-resume/branding/: Clinch.icns  build-icon.sh
tools/agent-resume/tests/: test_agent_plugins_install.sh  test_claude_argv_walk.sh  test_claude_flags.sh  test_claude_hook.sh  test_claude_launch.sh
(+18 files in other folders)
